--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="row page-titles " *ngFor="let user of users">
     <div class="col-md-5 align-self-center">
-        <h2 class="text-themecolor animated fadeInLeft">Bienvenid@
+        <h2 class="text-themecolor animated fadeInLeft">Bienvenid&#64;
             <h4 class="animated fadeInDown">Usuario: {{user.username}} </h4>
         </h2>
     </div>
